separate into components and fix alignment

--- a/src/components/SplashPage/SplashPage.css
+++ b/src/components/SplashPage/SplashPage.css
@@ -1,13 +1,21 @@
+:root {
+    --scrollPos:0px;
+    --totalHeight:10000000000000;
+    --scrollPosDeg:0deg;
+}
+
 img {
     height: 400px;
     width: 400px;
-    border-radius: 1000px;;
+    border-radius: 50%;;
     
 }
 .container {
+    position:fixed;
+    width: 100vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    top: 1.5vw;
+    left: 1.5vw;
     height: 100vh;
     
 }
@@ -20,27 +28,126 @@ img {
 .progress {
     width: 500px;
     height: 500px;
-    aspect-ratio: 1/1; 
-    position: relative;
-    margin: 5px;
-    place-content: center; 
+    transform: scale(.9);
 }
-.progress:before,
-.progress:after {
-    content: "";
+.content {
+    height: calc(100vh*4);
+    top:0;
+    left: 0;
+    z-index: -1;
+}
+.sectionLabelContainer > div > div {
+    height: 70px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 15px;
+}
+.sectionLabelMover {
+transform: translateY(calc(0px + (-300 * (var(--scrollPos) / var(--totalHeight)))));
+}
+
+.sectionLabelQual {
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    /* margin-top: calc(-500 * (var(--scrollPos) / var(--totalHeight))); */
+    
+
+
+    /* transform:
+        rotateX(calc(90 * (var(--scrollPosDeg) / var(--totalHeight)))) 
+        translateZ( calc(50 * (var(--scrollPos) / var(--totalHeight)))); */
+}
+.sectionLabelContainer {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    mask-image: linear-gradient(transparent, black 20% 40%, transparent 50%);
+    overflow: hidden;
+}
+
+svg.top-right {
     position: absolute;
-    border-radius: 50%;
+    top:-260px;
+    left:-240px;
+    transform: rotate(-86deg);
 }
-.progress:before {
-    inset: 0;
-    background:
-        radial-gradient(farthest-side, grey 96%, #0000)  0 260px/ 22px 22px no-repeat,
-        conic-gradient(blue calc(20*1%), #0000 0);
-    -webkit-mask: radial-gradient(farthest-side, #0000 calc(99% - 22px), #000 calc(100% - 22px));
-    mask: radial-gradient(farthest-side, #0000 calc(92% - 22px), #000 calc(100% - 22px));
+svg.bottom-right {
+    position: absolute;
+    top: -240px;
+    left: -240px;
+    transform: rotate(4deg);
+    
 }
-.progress:after {
-    inset: calc(50% - 22px/2);
-    background: red;
-    transform: rotate(calc(20*3.6deg - 90deg)) translate(calc(150px/2 - 50%));
+svg.bottom-left {
+    position: absolute;
+    top: -240px;
+    left: -260px;
+    transform: rotate(94deg);
+}
+svg.top-left {
+    position: absolute;
+    top: -260px;
+    left: -260px;
+    transform: rotate(184deg);
+}
+circle.top-right {
+    stroke: red;
+    stroke-width: 30px;
+    fill: rgba(255, 255, 255, 0);
+    stroke-dasharray:1445px ;
+    stroke-dashoffset:  max(1111px, calc(1445px - (1445 *  (var(--scrollPos) / var(--totalHeight)))));
+    
+}
+
+circle.bottom-right {
+    stroke: blue;
+    stroke-width: 30px;
+    fill: rgba(255, 255, 255, 0);
+    stroke-dasharray: 1445px;
+    stroke-dashoffset: min(1445px, max(1111px, calc(1806.25px - (1445 * (var(--scrollPos) / var(--totalHeight))))));
+}
+
+circle.bottom-left {
+    stroke: green;
+    stroke-width: 30px;
+    fill: rgba(255, 255, 255, 0);
+    stroke-dasharray: 1445px;
+    stroke-dashoffset: min(1445px, max(1111px, calc(2167.5px - (1445 * (var(--scrollPos) / var(--totalHeight))))));
+}
+
+circle.top-left {
+    stroke: purple;
+    stroke-width: 30px;
+    fill: rgba(255, 255, 255, 0);
+    stroke-dasharray: 1445px;
+    stroke-dashoffset: min(1445px, max(1111px, calc(2528.75px - (1445 * (var(--scrollPos) / var(--totalHeight))))));
+}
+
+
+.content > div {
+    height: 100vh;
+    width:100vw;
+}
+.splash {
+    background-color: rgb(255, 200, 200);
+}
+.qualifications {
+    
+    background-color: rgb(200, 200, 255);
+}
+.work {
+    
+    background-color: rgb(200, 255, 200);
+}
+.about {
+    
+    background-color: rgb(255, 200, 255);   
+}
+.content > .contact {
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(255, 200, 200);
 }
